apps/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - port: 80
      targetPort: grafana
  selector:
    app.kubernetes.io/name: grafana
