apps/grafana/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: grafana
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - port: 3306
          protocol: TCP
        - port: 3307
          protocol: TCP
        - port: 443
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              name: loki
          podSelector: {}
      ports:
        - port: 3100
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              networking/namespace: kube-system
          podSelector: {}
      ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              name: keycloak
          podSelector:
            matchLabels:
              app.kubernetes.io/name: keycloak
